res/css/style.css
/* ... */
.project-img {
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 10px;
    width: 100%;
    max-height: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.projectsPadding {
    margin-top: 20px;
}

.topCardProjects {
    min-height: auto !important;
}

.project-content {
    overflow: hidden;
    margin-top: 10px;
}

.image-container-projects {
    padding-bottom: 100%;
    overflow: hidden;
    position: relative;
    width: 100%;
}

.extra a {
    color: inherit;
    text-decoration: none;
}

.extra a:hover {
    color: inherit;
    text-decoration: none;
}

.project a {
    color: inherit;
    text-decoration: none;
}

.project a:hover {
    color: inherit;
    text-decoration: none;
}

.projectsWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
}

.columnTwo {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
}

@media only screen and (max-width: 920px) {
    .projectsWrapper {
        grid-template-columns: 1fr 1fr;
    }

    .columnTwo {
        grid-template-columns: 1fr 1fr;
    }

    .projectCard {
        flex: 1 0 calc(50% - 20px);
        overflow: hidden;
    }
    .projectHR{
      grid-column-start: 1;
      grid-column-end: 3;
      margin: 10px;
    }
}

@media only screen and (max-width: 640px) {
    .projectHR{
      grid-column-start: 1;
      grid-column-end: 2;
      margin: 10px;
    }
    .projectsWrapper {
        grid-template-columns: 1fr;
    }

    .columnTwo {
        grid-template-columns: 1fr;
    }

    .projectCard {
        flex: 1 0 calc(100% - 20px);
        overflow: hidden;
    }
}

.deprecated {
  text-align: center;
  margin-top: 20px;
}

/* Cards homepage layout */

.pageMotto{
  margin: 1em 0;
}

.horizontal {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;

}

.fa-sun{
  color: var(--accent);
}

.horizontalSocial {
    display: grid;
    grid-template-columns: 1fr 1fr;
    text-align: left;
}

.card {
    margin: 10px;
    overflow: hidden;
}

.logo {
    padding-left: 128px;
    margin-right: 69px;
}

.firmaNetwork {
    padding-right: 69px;
    border-left: 1px solid var(--maintext);
    padding-left: 80px;
    font-weight: 60;
}

.sign {
    background: var(--mainbackground);
    border: 1px solid var(--maintext);
    padding: 0px;
    margin-bottom: 25px;
    margin-top: 10px;
}

.cardTitleAndDescription {
    margin: 10px;
}

.pcenter {
    text-align: center;
}

.section {
    margin-top: 5px;
}

.topCard {
    display: grid;
    grid-template-columns: 3fr 8fr;
    grid-template-rows: 4fr 1fr;
    min-height: 210px;
}

.socialBanner{
  display: flex;
  align-items: center;
  grid-column-start: 1;
  grid-column-end: 3;
}

.homepagesocial{
  align-items: center;
  display: flex;
  margin-left: auto;
  margin-right: auto;
}

.socialHomepageIcon{
  padding: 0 30px 20px 30px;
}

.socialHomepageIcon{
  color: var(--maintext);
  font-size: 1.05em
}
.socialHomepageIcon:visited {
  color: var(--maintext);
}
.socialHomepageIcon:hover {
  color: var(--maintext);
}

.footerWrapper {
  padding-top: 20px;
  max-width: 900px;
  margin: 0 auto;
}

.disclamer {
  text-align: center;
  font-size: 10px;
}

.footerGrid {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.footerSection {
    display: flex;
}

.footerSection a {
    margin: auto;
    color: inherit;
    font-size: 1.2em;
    margin-right: 0;
}

/* Cards homepage layout END */

/* Contacts */

.contactsList{
  padding-left: 0.5rem;
  list-style-type: none;
}

/* Tutoring */


.courseExpandable {
  cursor: pointer;
  outline: none;
}

.active i{
  transform: rotate(180deg);
}

.collapsible i:hover{
  cursor: pointer;
}

.collapsible i {
  padding: 3px;
  transition: all 0.4s ease;
  font-size: 1.3em;
  margin-right: 10px;
  margin-top: auto;
  margin-bottom: auto;
}

.containerFA{
  justify-content: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  transition: all 0.4s ease;
}

.collapsible{
  display: flex;
}

.content {
  max-height: 0;
  font-size: 1em;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
}

.tutoringa{
  color: var(--maintext);
  font-family: futura;
}

.tutoringh3{
  color: #03DAC5;
  font-size: 1.8em;
  text-align: left;
  display: inline-block;
  margin-top: 15px;
  margin-bottom: 15px;
  font-family: futura;
}

.tutoringh1{
  font-size: 2.6em;
  text-align: center;
  font-family: futura;
}

@font-face {
  font-family: futura;
  src: url("/res/guides/Futurabook.ttf");
}

@media only screen and (max-width: 800px) {

    .centerGrid h1 {
        text-align: center;
    }

    .firmaNetwork {
        border-left: 0 !Important;
        padding-right: 0;
        padding-left: 0;
    }

    .topCard {
        grid-template-columns: 4fr 8fr;
    }

    .logo {
        padding-left: 0;
        margin-right: 0px;
    }

    .centerGrid {
        margin: auto;
    }
}

@media only screen and (max-width: 768px) {
    .horizontal {
        grid-template-columns: 1fr 1fr;
        grid-row: auto;
    }

    .info {
        grid-column-start: 1;
        grid-column-end: 3;

    }

}
/* ... */

